test/tests/stages/9_functions/invalid_types/extra_credit/compound_assign_function_lhs.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(x)
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  identifier(x)
  +=
  const int(3)
  ;
  return
  const int(0)
  ;
  }
